2004-11-19 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/Message.h
  * include/cppunit/SourceLine.h:
  * src/cppunit/Message.cpp:
  * src/cppunit/SourceLine.cpp: provided thread-safe copy constructor on
    platform that do not provide thread-safe copy constructor for std::string.

2004-11-08 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/TestAssert.h: fixed portability bug pointed out by
    Neil Ferguson.

2004-11-06 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/TestAssert.h: integrated Neil Ferguson patch for high
    precision conversion to string for double number. Modified the patch
    to works even if DBL_DIG C99 macro is not defined.

  * include/cppunit/Portability.h: fixed EVC++ 4 detection.

  * src/cppunit/Win32DynamicLibraryManager.cpp: integrated patch #1024428,
    MinGW compilation under Windows XP. 

2004-11-05 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/TestAssert.h:
  * src/cppunit/TestAssert.cpp: integrated Neil Ferguson patch for missing
    _MESSAGE assertion variants. Also enhanced the failure message of a 
    few assertions.

2004-09-10 Baptiste Lepilleur <gaiacrtn@free.fr>

  * src/msvc6/DSPlugIn/StdAfx.h: add #error to prevent compilation on VC 7.

  * src/msvc6/testrunner/MsDevCallerListCtrl.cpp:
  * src/msvc6/testrunner/MsDevCallerListCtrl.h: integrated go to source line
    features on double click contributed by Max Quatember and 
    Andreas Pfaffenbichler.

2004-08-01 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/XmlOutputter.h:
  * include/cppunit/tools/XmlDocument.h:
  * src/cppunit/XmlDocument.cpp:
  * src/cppunit/XmlOutputter.cpp: integrated patch #997006 from Akos Maroy. 
    This patch makes the 'standalone' attribute in XML header optional.

2004-06-25 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/Portability.h: moved OStringStream alias definition to
    portability/Stream.h. User need to define EVC4 to indicate that 